Define fees averaging in term of configured time-window
 * update the tests
 * fix a flaky test

--- a/conseil-lorre/src/main/resources/application.conf
+++ b/conseil-lorre/src/main/resources/application.conf
@@ -4,8 +4,8 @@ lorre {
   bootup-connection-check-timeout: 10 s
   #Used to make sure Lorre records average fees every n iterations
   fee-update-interval: 20
-  #Used to select how many fees should be averaged together
-  number-of-fees-averaged: 1000
+  #Used to select how many fees should be averaged together, based on a time-window
+  fees-average-time-window: 1 day
   #Docs missing
   depth: newest
   depth: ${?CONSEIL_LORRE_DEPTH}
