[ETCM-271] Add Support for Mantis in Lorre and Conseil-API

--- a/conseil-api/src/main/resources/metadata.conf
+++ b/conseil-api/src/main/resources/metadata.conf
@@ -72,4 +72,13 @@ metadata-configuration {
       }
     }
   }
+  mantis {
+    visible: true
+    networks {
+      testnet {
+        include "metadata/mantis.testnet.conf"
+        visible: true
+      }
+    }
+  }
 }
