[ETCM-296] Add support for Mantis txs and tx receipts

--- a/conseil-api/src/main/resources/metadata/mantis.testnet.conf
+++ b/conseil-api/src/main/resources/metadata/mantis.testnet.conf
@@ -65,47 +65,41 @@
         hash {
           visible: true
         }
+        nonce {
+          visible: true
+        }
         block_hash {
           visible: true
         }
         block_number {
           visible: true
         }
+        transaction_index {
+          visible: true
+        }
         from {
-          visible: true
-        }
-        gas {
-          visible: true
-        }
-        gas_price {
-          visible: true
-        }
-        input {
-          visible: true
-        }
-        nonce {
           visible: true
         }
         to {
           visible: true
         }
-        transaction_index {
-          visible: true
-        }
         value {
           visible: true
         }
-        v {
+        gas_price {
           visible: true
-          display-name: "ECDSA Recovery ID"
         }
-        r {
+        gas {
           visible: true
-          display-name: "ECDSA Signature R"
         }
-        s {
+        input {
           visible: true
-          display-name: "ECDSA Signature S"
+        }
+        pending {
+          visible: true
+        }
+        is_outgoing {
+          visible: true
         }
       }
     }
@@ -150,13 +144,10 @@
         transaction_index {
           visible: true
         }
-        block_hash {
-          visible: true
-        }
         block_number {
           visible: true
         }
-        contract_address {
+        block_hash {
           visible: true
         }
         cumulative_gas_used {
@@ -165,13 +156,7 @@
         gas_used {
           visible: true
         }
-        logs_bloom {
-          visible: true
-        }
-        status {
-          visible: true
-        }
-        root {
+        contract_address {
           visible: true
         }
       }
